docs/.vuepress/styles/index.styl
@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Serif&display=swap');
@import url('https://fonts.googleapis.com/css?family=Philosopher&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
body
  font-family 'IBM Plex Serif', serif !important;
  font-display: swap;
  letter-spacing .002em!important
  background-color #fbfbff!important
  min-height 100vh

pre
  font-size 16px!important

h1, h2, h3, h4, h5, h6, .site-name, nav
  font-family 'Philosopher', sans-serif
  font-display: swap;
  letter-spacing .02em;

img.about-image
  border-radius 50%
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 350px;
  filter: grayscale(100%)

.readme
  color: darken(#dc6299, 20%)
  text-transform: lowercase!important

@media (min-width: 600px)
  img.about-image
    float right
    margin-left 10px
    margin-bottom 10px

.navbar .links
  background-color transparent!important

.navbar
  background: #dcdfe6;  /* fallback for old browsers */
  background: linear-gradient(25deg, #dcdfe6, #c5cce4);
  background: -webkit-linear-gradient(25deg, #dcdfe6, #c5cce4);  /* Chrome 10-25, Safari 5.1-6 */
  border-bottom: none !important;

.navbar .site-name
  letter-spacing: .08em!important;

.page-edit .last-updated
  float: none !important;
  font-size: 0.7em !important;

.theme-container.hide-updated .page-edit .last-updated
  display none

blockquote
  color: #000;
  border-left: 0.2rem solid #dc6299;
  font-style: italic;

img[src*="#small"]
  width: 200px;
  float: right;

div[class*="language-"],
div[class*="language-"] *
  font-family: 'IBM Plex Mono', monospace;

